--- a/CafeteriaApp/index.html
+++ b/CafeteriaApp/index.html
@@ -48,7 +48,9 @@ div.stars {
   display: inline-block;
 }
 
-input.star { display: none; }
+input.star {
+ display: none;
+  }
 
 label.star {
   float: right;
@@ -69,9 +71,14 @@ input.star-5:checked ~ label.star:before {
   text-shadow: 0 0 20px #952;
 }
 
-input.star-1:checked ~ label.star:before { color: #F62; }
+input.star-1:checked ~ label.star:before {
+ color: #F62;
+  }
 
-label.star:hover { transform: rotate(-15deg) scale(1.3); }
+label.star:hover { 
+  transform: rotate(-15deg) scale(1.3);
+  cursor: pointer;
+   }
 
 label.star:before {
   content: '\f006';
@@ -137,15 +144,7 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
     </form>
   </div>
 </div>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-46156385-1', 'cssscript.com');
-  ga('send', 'pageview');
 
-</script>
 </body>
 </html>
